--- a/book_studier.css
+++ b/book_studier.css
@@ -163,15 +163,12 @@
 }
 
 /* ****************For DESKTOP */
-@media only screen and (min-width: 768px) {
+@media (min-width: 750px) {
   .studier__image {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: auto;
     height: 474px;
-  }
-
-  .studier__title {
   }
 }
