--- a/product_list.css
+++ b/product_list.css
@@ -33,6 +33,8 @@ img {
 .info_tekst{
    padding-top: 10px;
    padding-bottom: 20px;
+   width: 90%;
+   line-height: 30px;
 }
 
 
@@ -80,6 +82,12 @@ h2 {
         width: 250px;
     }
 
+    .info_tekst{
+        padding-top: 20px;
+        padding-bottom: 70px;
+        width: 60%;
+   line-height: 50px;
+     }
 
     .produktliste_kategorier{
         display: grid;
