--- a/product_list.css
+++ b/product_list.css
@@ -1,4 +1,3 @@
-
 /******* HEROSECTION *******/
 img {
     width: 100%;
@@ -66,8 +65,9 @@ h2 {
 
 
 
+/* MEDIA QUERIES */
 @media (min-width: 750px) {
-    .herosection_img{
+    .herosection_img {
         height: 450px;
         width: 100%;
         object-fit: cover;
@@ -75,31 +75,57 @@ h2 {
     }
 
     .logo {
+        z-index: 10 !important;  
         position: absolute;
-        top: 215px;
-        left: 1200px; 
+        top: 300px;  
+        left: 50%;
+        transform: translateX(-50%);
         height: 250px;
         width: 250px;
     }
 
-    .info_tekst{
+    .toppen {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    .hero-container {
+        display: grid;
+        grid-column: 2;
+    }
+
+    .produktliste_overskrift {
+        align-items: center;
+        display: grid;
+        grid-column: 1;
+        grid-row: 1;
+    }
+
+    .produktliste_overskrift2 {
+        background-color: white;
+        color: #024059;
+    }
+
+    .info_tekst {
+        z-index: 8;
         padding-top: 20px;
         padding-bottom: 70px;
         width: 60%;
-   line-height: 50px;
-     }
+        line-height: 50px;
+        position: relative;
+    }
 
-    .produktliste_kategorier{
+    .produktliste_kategorier {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
     }
 
     .custom-line {
-        width: 80%; 
-        margin: 20px auto; 
+        width: 80%;
+        margin: 20px auto;
         border: none;
-        border-top: 2px solid #F28DBC; 
+        border-top: 2px solid #F28DBC;
     }
-    
-
 }
+
