--- a/styletile.css
+++ b/styletile.css
@@ -1,135 +1,164 @@
-.farver{
-    color: #F28DBC;
-    color: #F2C4DA;
-    color: #024059;
-    color: #F2F2F2;
+.farver {
+  color: #f28dbc;
+  color: #f2c4da;
+  color: #024059;
+  color: #f2f2f2;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
-html, body {
-    overflow-x: hidden; 
-    width: 100%; 
-    max-width: 100%;
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100%;
 }
 
-/****** FONT ********/ 
+/****** FONT ********/
 .roboto-light {
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-  }
-  
-  .roboto-bold {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-  }
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
 
+.roboto-bold {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
 
 /****** MOBILE *******/
 
-
 h1 {
-    font-size: 40px;
-    background-color: #024059; 
-    color: white; 
-    width: 100%; 
-    margin: 0; 
-    padding: 20px 0; 
-    padding-left: 16px;
-    text-align: left;
-    box-sizing: border-box;
-    font-family: "Roboto", sans-serif ;
+  font-size: 40px;
+  background-color: #024059;
+  color: white;
+  width: 100%;
+  margin: 0;
+  padding: 20px 0;
+  padding-left: 16px;
+  text-align: left;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 h2 {
-    font-size: 24px;
-    padding-left: 16px;
-    font-family: "Roboto", sans-serif ;
-    color: #024059; 
+  font-size: 24px;
+  padding-left: 16px;
+  font-family: "Roboto", sans-serif;
+  color: #024059;
 }
 
 p {
-    font-size: 16px;
-    color: #024059; 
-    word-wrap: break-word; 
-    max-width: 100%; 
-    padding-left: 16px;
-    font-family: "Roboto", sans-serif ;
+  font-size: 16px;
+  color: #024059;
+  word-wrap: break-word;
+  max-width: 100%;
+  padding-left: 16px;
+  font-family: "Roboto", sans-serif;
 }
 
 .cta {
-    width: auto;
-    height: 40px;
-    font-size: 20px;
-    font-family: "Roboto", sans-serif ;
-    color: white; 
-    background-color: #F28DBC; 
-    display: inline-block; 
-    padding: 0 10px;
-    line-height: 40px; 
-    text-align: center;
-    border-radius: 2px; 
+  width: auto;
+  height: 40px;
+  font-size: 20px;
+  font-family: "Roboto", sans-serif;
+  color: white;
+  background-color: #f28dbc;
+  display: inline-block;
+  padding: 0 10px;
+  line-height: 40px;
+  text-align: center;
+  border-radius: 2px;
 }
 
 .cta:hover {
-    background-color: #F2C4DA; 
-    color: white; 
+  background-color: #f2c4da;
+  color: white;
 }
 
-.info{
+.info {
+  background-color: #f2c4da;
+  color: #024059;
+  width: 100%;
+  margin: 0;
+  padding: 20px 0;
+  text-align: left;
+  box-sizing: border-box;
+}
 
-    background-color: #F2C4DA ; 
-    color:#024059 ; 
-    width: 100%; 
-    margin: 0; 
-    padding: 20px 0; 
-    text-align: left;
-    box-sizing: border-box;
+.footer {
+  background-color: #233249;
+  color: white;
+  padding: 16px;
+}
+
+.footer h2 {
+  color: white;
+  line-height: 20px;
+  font-size: 18px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.footer h3 {
+  color: white;
+  font-size: 16px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-family: "Roboto", sans-serif;
+  padding: 16px;
+}
+
+.footer p {
+  color: white;
+}
+.footer li {
+  color: white;
+  font-size: 14px;
+  padding-left: 16px;
+  font-family: "Roboto", sans-serif;
+  line-height: 30px;
 }
 
 /****** DESKTOP *******/
 
 @media (min-width: 750px) {
+  h1 {
+    font-size: 67px;
+    padding-left: 25px;
+  }
 
+  h2 {
+    font-size: 45px;
+    padding-left: 25px;
+  }
 
-    
-    h1 {
-        font-size: 67px;
-        padding-left: 25px;
-    }
-    
-    h2 {
-        font-size: 45px;
-        padding-left: 25px;
-    }
-    
-    p {
-        font-size: 30px;
-        padding-left: 25px;
-    }
+  p {
+    font-size: 30px;
+    padding-left: 25px;
+  }
 
-    .cta {
-        width: 213px;
-        height: 56px;
-        font-size: 30px;
-        color: white; 
-        background-color: #F28DBC; 
-        display: inline-block; 
-        padding: 5px;
-        line-height: 40px; 
-        text-align: center;
-        border-radius: 2px; 
-    }
-    
-    .cta:hover {
-        background-color: #F2C4DA; 
-        color: white; 
-    }
+  .cta {
+    width: 213px;
+    height: 56px;
+    font-size: 30px;
+    color: white;
+    background-color: #f28dbc;
+    display: inline-block;
+    padding: 5px;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 2px;
+  }
+
+  .cta:hover {
+    background-color: #f2c4da;
+    color: white;
+  }
 }
