--- a/product_list.css
+++ b/product_list.css
@@ -75,7 +75,7 @@ h2 {
     }
 
     .logo {
-        z-index: 10 !important;  
+        z-index: 10 ;  
         position: absolute;
         top: 300px;  
         left: 50%;
@@ -122,7 +122,7 @@ h2 {
     }
 
     .custom-line {
-        width: 80%;
+        width: 90%;
         margin: 20px auto;
         border: none;
         border-top: 2px solid #F28DBC;
