--- a/produkt_side.css
+++ b/produkt_side.css
@@ -86,6 +86,7 @@ nav {
 
 /* Menu list styling */
 .menu {
+  font-weight: bold;
   display: flex;
   list-style: none;
   margin: 0;
@@ -105,7 +106,7 @@ nav {
 .menu a {
   display: block;
   padding: 10px;
-  color: #f2c4da;
+  color: #fff2f8;
   text-decoration: none;
   transition: color 0.3s;
   text-align: center; /* Center align text for better appearance */
