--- a/produkt_side.css
+++ b/produkt_side.css
@@ -21,6 +21,46 @@ img {
   height: 70px;
 }
 
+.nederst__pink_container {
+  background-color: #f2c4da;
+  height: 70px;
+}
+
+.produkter {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.produkt {
+  text-align: center;
+}
+
+.produkt h2 {
+  font-size: 16px;
+  color: #024059;
+}
+
+.produkt img {
+  width: 100px;
+  height: auto;
+  margin-top: 10px;
+}
+
+h4 {
+  font-size: 40px;
+  background-color: #f2c4da;
+  color: #024059;
+  width: 100%;
+  margin: 0;
+  padding: 20px;
+  padding-left: 16px;
+  text-align: left;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
 ul {
   padding: 0;
   margin: 20px 0;
@@ -33,7 +73,7 @@ ul li {
   color: white;
 }
 
-/*********** General header & nav styling ***********/
+/******************* General header & nav styling ************************/
 header {
   display: flex;
   justify-content: space-between;
