--- a/book_studier.css
+++ b/book_studier.css
@@ -9,6 +9,10 @@
   margin-top: 50rem;
 }
 
+.studio__title {
+  display: block;
+}
+
 /* Photo studio */
 .info__grid {
   padding: 2rem 0;
@@ -78,6 +82,16 @@
   color: white;
 }
 
+.cta_book a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.cta_book a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
 /* Linje design */
 .linje {
   border: none;
@@ -127,7 +141,7 @@
   margin-left: 75px;
 }
 
-/* ****************For DESKTOP */
+/* ****************For DESKTOP ***************************************************/
 @media (min-width: 750px) {
   .studier__image {
     display: block;
@@ -135,5 +149,119 @@
     margin-right: auto;
     width: auto;
     height: 474px;
+  }
+
+  .studier {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+  }
+
+  .studier__image {
+    display: grid;
+    grid-column: 2;
+  }
+
+  .studier__title {
+    background-color: white;
+    color: #024059;
+    grid-row: 1;
+    grid-column: 1;
+    align-items: center;
+    margin-top: 136px;
+  }
+
+  /* Info boks */
+  .info {
+    padding: 40px;
+  }
+
+  .info__beskrivelse {
+    line-height: 40px;
+    width: 895px;
+  }
+
+  .studio__title {
+    visibility: hidden;
+  }
+
+  /* Produkt liste */
+  .product-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 10px;
+    margin-top: -100px;
+    margin-bottom: 50px;
+  }
+
+  .product-list img {
+    height: auto;
+    width: 177px;
+  }
+
+  .product-list__beskrivelse,
+  product-list__beskrivelse-2,
+  product-list__beskrivelse-3 {
+    line-height: 30px;
+    margin-right: 5px;
+    width: 250px;
+    margin-bottom: 10px;
+    font-size: 20px;
+  }
+
+  .product-list__column-1-1,
+  .product-list__column-2-1,
+  .product-list__column-3-1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .product-list p {
+    font-size: 20px;
+    width: 284px;
+  }
+
+  .linje {
+    visibility: hidden;
+  }
+
+  /* Footer DESKTOP */
+
+  .footer {
+    padding: 40px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+    margin-left: 20px;
+  }
+
+  .footer h3 {
+    font-size: 16px;
+    padding: 10px;
+  }
+
+  .footer p {
+    font-size: 16px;
+    padding: 10px;
+  }
+
+  .top_kolon {
+    grid-column: 1;
+  }
+
+  .top_2 {
+    grid-column: 1;
+  }
+
+  .kolon_1 {
+    grid-column: 1;
+  }
+  .kolon_2 {
+    grid-column: 2;
+  }
+  .kolon_3 {
+    grid-column: 3;
   }
 }
