--- a/product_list.css
+++ b/product_list.css
@@ -67,6 +67,54 @@ img {
   border-top: 2px solid #F28DBC; 
 }
 
+
+/*********************** Newsletter input **************************/
+
+.newsletter-signup {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.newsletter-signup p {
+  font-size: 20px;
+  color: #024059;
+  margin-bottom: 15px;
+}
+
+.newsletter-signup form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.newsletter-signup input[type="email"] {
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  width: 300px;
+  background-color: #eee;
+  margin-bottom: 20px;
+}
+
+.newsletter-signup button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #f28dbc;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+.newsletter-signup button:hover {
+  background-color: #e0a0bb;
+}
+
+
+
 /* MEDIA QUERIES */
 @media (min-width: 750px) {
   .herosection_img {
@@ -175,6 +223,16 @@ header {
   padding: 0 20px;
   box-sizing: border-box;
   z-index: 1000; /* Ensure the header is above other content */
+}
+
+.kea_logo a {
+  text-decoration: none;
+  border-bottom: none;
+  color: white;
+}
+
+.kea_logo :hover {
+  color: #f28dbc;; 
 }
 
 .burger,
