--- a/produkt_side.css
+++ b/produkt_side.css
@@ -75,6 +75,14 @@ ul li {
     width: auto;
   }
 
+  h5{
+    padding: 20px;
+    font-size: 67px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+
   .grid_container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -125,7 +133,7 @@ header {
 
 h5{
   padding: 20px;
-  font-size: 67px;
+  font-size: 40px;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-style: normal;
